--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button id="start-button">Iniciar</button>
     </div>
 
-    <script src="./js/app2.js"></script>
-    <!--script src="./js/app.js"></script-->
+    <script src="./js/app.js"></script>
+    <!--script src="./js/app2.js"></script-->
 </body>
 </html>
