--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+
+    <header>
+        <h1>Bem-vindo ao Brincando de Soletrar</h1>
+    </header>
+
     <div class="container">
-        <header>
-            <h1>Bem-vindo ao Brincando de Soletrar</h1>
-        </header>
+        
 
         
 
@@ -53,6 +56,8 @@
 
         <button id="start-button">Iniciar</button>
     </div>
+
+    <footer id="id-footer">Dalecio Moura</footer>
 
     <script src="./js/app.js"></script>
     <!--script src="./js/app2.js"></script-->
